fix(mail): add Render-compatible HTTPS API support (Brevo/Resend) and improve SMTP error reporting